objects/Asset.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__UsageCostTotal__c</fullName>
        <description>Usage Cost Total</description>
        <label>Usage Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMargin__c</fullName>
        <description>Usage Margin</description>
        <label>Usage Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageMeasurementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This reference to Charge Measurement for usage pricing.</description>
        <label>Usage Unit of Measure</label>
        <referenceTo>vlocity_cmt__ChargeMeasurement__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsagePriceTotal__c</fullName>
        <description>Usage Price Total</description>
        <label>Usage Price Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageQuantity__c</fullName>
        <description>Usage Quantity</description>
        <label>Usage Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageUnitCost__c</fullName>
        <description>Usage Cost</description>
        <label>Usage Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UsageUnitPrice__c</fullName>
        <description>Usage Price</description>
        <label>Usage Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Username__c</fullName>
        <description>Asset user name</description>
        <label>User Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <columns>ASSET.NAME</columns>
        <columns>vlocity_cmt__LineNumber__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>ASSET.LAST_UPDATE</columns>
        <columns>Vlocity_Demo_Asset__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <listViews>
        <fullName>Hilton_United_States</fullName>
        <columns>ASSET.NAME</columns>
        <columns>ASSET.STATUS</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>ASSET.INSTALL_DATE</columns>
        <columns>ASSET.LAST_UPDATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Vlocity_Demo_Asset__c</columns>
        <columns>vlocity_cmt__ServiceAccountId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__ServiceAccountId__c</field>
            <operation>startsWith</operation>
            <value>Hilton - United</value>
        </filters>
        <label>Hilton - United States</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__Asset_Activation_Date_Rule</fullName>
        <active>false</active>
        <description>Validation Rule for Asset Activation Date. It should not be in the past.</description>
        <errorConditionFormula>OR (vlocity_cmt__ActivationDate__c&lt;TODAY()) &amp;&amp; (NOT( ISCHANGED( vlocity_cmt__CatalogItemReferenceDateTime__c ) ) || ISCHANGED( vlocity_cmt__ActivationDate__c ) ) &amp;&amp; (NOT( ISCHANGED( vlocity_cmt__ProductHierarchyGroupKeyPath__c )) || ISCHANGED( vlocity_cmt__ActivationDate__c ))</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__ActivationDate__c</errorDisplayField>
        <errorMessage>Activation Date cannot be in the past.</errorMessage>
    </validationRules>
</CustomObject>